--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -43,9 +43,9 @@
         if (aQuery.indexOf("status") > 0) {
             $('#imgs').attr('src','/Public/home/images/news_en.jpg');
             $('#from1').empty();
-            $('#from1').append("origin：<span id='from'></span>");
+            $('#from1').append("source：<span id='from'></span>");
             $('#auth1').empty();
-            $('#auth1').append("auth：<span id='auth'></span>");
+            $('#auth1').append("author：<span id='auth'></span>");
             document.title='Maison Capital';
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
@@ -362,7 +362,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-10 col-lg-offset-1">
-            <img style="" id="img1" src=""/>
+            <img style="margin-top: 0px !important;" id="img1" src=""/>
         </div>
     </div>
     <div class="row" style="margin-top: 10px;">
@@ -372,7 +372,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-10 col-lg-offset-1">
-            <img style="" id="img2" src=""/>
+            <img style="margin-top: 0px !important;" id="img2" src=""/>
         </div>
     </div>
     <div class="row" style="margin-top: 10px;">
@@ -382,7 +382,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-10 col-lg-offset-1">
-            <img style="" id="img3" src=""/>
+            <img style="margin-top: 0px !important;" id="img3" src=""/>
         </div>
     </div>
     <div class="row" style="margin-top: 10px;">
