--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -41,12 +41,12 @@
     $(function () {
         var aQuery = window.location.href;  //取得Get参数
         if (aQuery.indexOf("status") > 0) {
-            $('#imgs').attr('src','/Public/home/images/news_en.jpg');
+            $('#imgs').attr('src', '/Public/home/images/news_en.jpg');
             $('#from1').empty();
             $('#from1').append("source：<span id='from'></span>");
             $('#auth1').empty();
             $('#auth1').append("author：<span id='auth'></span>");
-            document.title='Maison Capital';
+            document.title = 'Maison Capital';
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
@@ -57,7 +57,7 @@
             "<li><a href='case.html?status=1' style='text-decoration: none;'>INVESTMENTS</a></li>" +
             "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
             "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
-        }else{
+        } else {
 
         }
         var width = $(document).width();
@@ -106,7 +106,7 @@
                 $('#content3').html(content3);
             }
         });
-        $('#img1,#img2,#img3').load(function() {
+        $('#img1,#img2,#img3').load(function () {
             adjustImgSize($(this), $(this).parent().width(), $(this).parent().height());
         });
     });
@@ -115,29 +115,27 @@
 
         var tempImg = new Image();
         tempImg.src = img.attr('src');
-        var imgWidth=tempImg.width;
-        var imgHeight=tempImg.height;
+        var imgWidth = tempImg.width;
+        var imgHeight = tempImg.height;
 
         //比较imgBox的长宽比与img的长宽比大小
-        if((boxWidth/boxHeight)>=(imgWidth/imgHeight))
-        {
+        if ((boxWidth / boxHeight) >= (imgWidth / imgHeight)) {
             //重新设置img的width和height
-            img.width((boxHeight*imgWidth)/imgHeight);
+            img.width((boxHeight * imgWidth) / imgHeight);
             img.height(boxHeight);
             //让图片居中显示
-            var margin=(boxWidth-img.width())/2;
-            img.css("margin-left",margin);
-        }
-        else
-        {
+            var margin = (boxWidth - img.width()) / 2;
+            img.css("margin-left", margin);
+        } else {
             //重新设置img的width和height
             img.width(boxWidth);
-            img.height((boxWidth*imgHeight)/imgWidth);
+            img.height((boxWidth * imgHeight) / imgWidth);
             //让图片居中显示
-            var margin=(boxHeight-img.height())/2;
-            img.css("margin-top",margin);
+            var margin = (boxHeight - img.height()) / 2;
+            img.css("margin-top", 0);
         }
-    };
+    }
+    ;
 
 
     function chinese() {
