--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -837,25 +837,25 @@
                     <a href="" id="invest_web"></a>
                 </div></div>
                 <div style="padding: 0;width: 100%" class="en">
-                <div class="col-lg-12" style="font-size: 14px;">Investment Staged：<span id="invest_stage_en"></span>
+                <div class="col-lg-12" style="font-size: 14px;text-align: left">Stage：<span id="invest_stage_en"></span>
                 </div>
-                <div class="col-lg-11" style="font-size: 14px;">Investment Time：<span id="invest_time_en"></span>
+                <div class="col-lg-11" style="font-size: 14px;text-align: left">Invest date：<span id="invest_time_en"></span>
                 </div>
-                <div class="col-lg-11" style="font-size: 14px;">Area：<span id="areas_en"></span>
+                <div class="col-lg-11" style="font-size: 14px;text-align: left">Headquarter：<span id="areas_en"></span>
                 </div>
-                <div class="col-lg-11" style="font-size: 14px;">Sectors：<span id="trade_en"></span>
+                <div class="col-lg-11" style="font-size: 14px;text-align: left">Sectors：<span id="trade_en"></span>
                 </div>
-                <div class="col-lg-11 exit" style="font-size: 14px;">Exit Time：<span
+                <div class="col-lg-11 exit" style="font-size: 14px;text-align: left">Exit date：<span
                         id="invest_exit_time_en"></span></div>
-                <div class="col-lg-11 exit" style="font-size: 14px;">Exit Way：<span id="invest_exit_way_en"></span>
+                <div class="col-lg-11 exit" style="font-size: 14px;text-align: left">Exit method：<span id="invest_exit_way_en"></span>
                 </div>
-                <div class="col-lg-11 exit" style="font-size: 14px;">Investment Return：<span
+                <div class="col-lg-11 exit" style="font-size: 14px;text-align: left">Gross return：<span
                         id="invest_reward_en"></span></div>
-                <div class="col-lg-11 exit addr" style="font-size: 14px;">Listing Location：<span
+                <div class="col-lg-11 exit addr" style="font-size: 14px;text-align: left">Listing Location：<span
                         id="invest_addr_en"></span></div>
-                <div class="col-lg-11 exit up_stock" style="font-size: 14px;">Lised Stocks：<span
+                <div class="col-lg-11 exit up_stock" style="font-size: 14px;text-align: left">Lised Stocks：<span
                         id="up_stock_en"></span></div>
-                <div class="col-lg-11" style="font-size: 14px;">Company Web：
+                <div class="col-lg-11" style="font-size: 14px;text-align: left">Web：
                     <a href="" id="invest_web_en"></a>
                 </div></div>
             </div>
