--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -41,6 +41,7 @@
     $(function () {
         var aQuery = window.location.href;  //取得Get参数
         if (aQuery.indexOf("status") > 0) {
+            $('#font').text('Original link:');
             $('#imgs').attr('src', '/Public/home/images/news_en.jpg');
             $('#from1').empty();
             $('#from1').append("source：<span id='from'></span>");
@@ -432,7 +433,7 @@
         </div>
     </div>
     <div class="row" id="link" style="margin-top: 10px;">
-        <div class="col-lg-10 col-lg-offset-1"><span style="font-family: 'Microsoft YaHei';font-size: 14px;">来源链接:</span><a href="" id="url"></a></div>
+        <div class="col-lg-10 col-lg-offset-1"><span style="font-family: 'Microsoft YaHei';font-size: 14px;" id="font">来源链接:</span><a href="" id="url"></a></div>
 </div>
 </div>
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;">
