--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -471,7 +471,7 @@
 
                         <div class="col-sm-4">
                             <input id="lefile" type="file" name="upload" style="display:none">
-                            <input id="img" class="form-control" style="width: 80% !important; float: left"
+                            <input id="img" class="form-control" placeholder="像素266*200" style="width: 80% !important; float: left"
                                    type="text">
                             <a class="btn btn-success" style="float: left"
                                onclick="$('input[id=lefile]').click();">上传</a>
