--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -843,7 +843,7 @@
                 </div>
                 <div class="col-lg-10 col-lg-offset-2" style="font-size: 14px;text-align: left">Headquarter：<span id="areas_en"></span>
                 </div>
-                <div class="col-lg-10 col-lg-offset-2" style="font-size: 14px;text-align: left">Sectors：<span id="trade_en"></span>
+                <div class="col-lg-10 col-lg-offset-2" style="font-size: 14px;text-align: left">Sector：<span id="trade_en"></span>
                 </div>
                 <div class="col-lg-10 col-lg-offset-2 exit" style="font-size: 14px;text-align: left">Exit date：<span
                         id="invest_exit_time_en"></span></div>
