--- a/Public/admin/contact.html
+++ b/Public/admin/contact.html
@@ -370,7 +370,7 @@
 
                         <div class="col-sm-4">
                             <input id="lefile" type="file" name="upload" style="display:none">
-                            <input id="img" class="form-control" style="width: 75% !important; float: left"
+                            <input id="img" placeholder="像素457*340" class="form-control" style="width: 75% !important; float: left"
                                    type="text">
                             <a class="btn btn-success" style="float: left"
                                onclick="$('input[id=lefile]').click();">上传</a>
