--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -44,6 +44,8 @@
         color: #a5a5a5;
         word-wrap: break-word;
         word-break: normal;
+        white-space: pre-wrap;
+        word-wrap: normal;
         white-space: -moz-pre-wrap;
         white-space: -o-pre-wrap;
         font-family: "Microsoft YaHei";
