--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -45,7 +45,8 @@
         word-wrap: break-word;
         word-break: normal;
         white-space: pre-wrap;
-        word-wrap: normal;
+        *white-space: pre;
+        *word-wrap: break-word;
         white-space: -moz-pre-wrap;
         white-space: -o-pre-wrap;
         font-family: "Microsoft YaHei";
