--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -42,7 +42,7 @@
         border: 0;
         background-color: #FFFFFF;
         color: #a5a5a5;
-        word-wrap: break-word;
+        word-wrap: normal !important;
         white-space: pre-wrap;
         white-space: -moz-pre-wrap;
         white-space: -o-pre-wrap;
