--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -289,7 +289,7 @@
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
-            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<span>奥ICP备案15079945号</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a
                 href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
