--- a/Public/home/law.html
+++ b/Public/home/law.html
@@ -180,7 +180,7 @@
             <img id="log" onclick="home()" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-9" id="top">
-            <div style="text-align: right"><a href="abort.html"style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a href="abort.html?status=1">English</a>
+            <div style="text-align: right"><a href="abort.html"style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a href="#">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
