--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -114,8 +114,8 @@
                     "</div>" +
                     "</div>");
                     if (r.msg[0].agent == 1) {
-                        $('#city_list').css('margin-left', '33.33333333%');
-                        $('#city_list').css('width', '33.33333333%');
+                        //$('#city_list').css('margin-left', '33.33333333%');
+                        //$('#city_list').css('width', '100%');
                     }
                 }
             });
@@ -144,8 +144,8 @@
                     "</div>" +
                     "</div>");
                     if (r.msg[0].agent == 1) {
-                        $('#city_list').css('margin-left', '33.33333333%');
-                        $('#city_list').css('width', '33.33333333%');
+                        //$('#city_list').css('margin-left', '33.33333333%');
+                        //$('#city_list').css('width', '33.33333333%');
                     }
                 }
             });
@@ -359,7 +359,7 @@
     <div class="row" >
         <table style="margin: 0 auto">
             <tr><td>
-        <div class="" style="margin: 0 auto" id="city_list"></div></td></tr></table>
+        <div class="" style="margin: 0 auto;" id="city_list"></div></td></tr></table>
     </div>
 </div>
 <div class="container" id="city" style="margin-top: 0px;">
