--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -299,4 +299,5 @@
     </div>
 </div>
 </body>
+<script id="ebsgovicon" src="http://szcert.ebs.org.cn/govicon.js?id=275bbf0d-8be4-412d-afcd-75ce5c5de37a&width=75&height=105&type=1" type="text/javascript" charset="utf-8"></script>
 </html>
