--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -86,13 +86,13 @@
                 $('#time').text(r.msg.time);
                 $('#from').text(r.msg.from);
                 $('#auth').text(r.msg.auth);
-                if(r.msg.link){
+                if (r.msg.link) {
 
-                }else{
-                    $('#link').css('display','none');
+                } else {
+                    $('#link').css('display', 'none');
                 }
                 $('#url').text(r.msg.link);
-                $('#url').attr('href',r.msg.link);
+                $('#url').attr('href', r.msg.link);
                 if (r.msg.img1) {
                     $('#img1').attr('src', '../..' + r.msg.img1);
                 }
@@ -215,7 +215,7 @@
     }
 
     #from1 {
-        margin-left: -5%
+        margin-left: -3%
     }
 
     #auth1 {
@@ -433,8 +433,9 @@
         </div>
     </div>
     <div class="row" id="link" style="margin-top: 10px;">
-        <div class="col-lg-10 col-lg-offset-1"><span style="font-family: 'Microsoft YaHei';font-size: 14px;" id="font">来源链接:</span><a href="" id="url"></a></div>
-</div>
+        <div class="col-lg-10 col-lg-offset-1"><span style="font-family: 'Microsoft YaHei';font-size: 14px;" id="font">来源链接:</span><a
+                href="" id="url"></a></div>
+    </div>
 </div>
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;">
     <div class="row" id="bottom">
