--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -78,7 +78,7 @@
             "dataType": 'json',
             success: function (r) {
                 if (r.msg.agent == 1) {
-                    $('#from1').css('margin-left', '0%');
+                    $('#from1').css('margin-left', 0);
                 }
                 var content1 = '<pre>' + r.msg.content1 + '</pre>';
                 var content2 = '<pre>' + r.msg.content2 + '</pre>';
@@ -218,7 +218,7 @@
     }
 
     #from1 {
-        margin-left: 5%
+        margin-left: -5%
     }
 
     #auth1 {
