--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -78,7 +78,8 @@
             "dataType": 'json',
             success: function (r) {
                 if (r.msg.agent == 1) {
-                    $('#from1').css('margin-left', 0);
+                    alert(1);
+                    $('#from1').css('margin-left', '0%');
                 }
                 var content1 = '<pre>' + r.msg.content1 + '</pre>';
                 var content2 = '<pre>' + r.msg.content2 + '</pre>';
