--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -379,7 +379,7 @@
         <div class="col-lg-10 col-lg-offset-1" style="font-size: 20px; font-weight: 600" id="title"></div>
     </div>
     <div class="row" style="font-size: 12px;color: #999;margin-top: 10px;">
-        <div class="col-lg-offset-1" style="float: left" id="time"></div>
+        <div class="col-lg-offset-1" style="float: left;padding-left: 15px;" id="time"></div>
         <div class=" " style="float: left;" id="from1">来源：<span id="from"></span></div>
         <div class=" " style="width: 20%;margin-left: 1%;float: left" id="auth1">作者：<span id="auth"></span></div>
     </div>
